Fix error color so that they are black instead of yellow, and therefore visible

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,3 +137,7 @@ input, select, textarea {
 textarea {
     width: 300px;
 }
+/* Errors */
+.error {
+    color: black;
+}
